# qq

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  command.h  command_executor.h  command_line_parser.h  command_matcher.cpp  command_matcher.h  configuration.h  main.cpp  plugin_type.cpp  plugin_type.h  script.h  script_database.h  script_executor.h  script_storage.h  ui.h  utils.h
src/commands/: command_registry.h  run_command.h  store_command.h
src/configuration/: configuration.h  configuration_option.h  display.h  extensions.h  paths.h
src/matcher/: script_matcher.cpp  script_matcher.h
src/utils/: filesystem_utils.h  float_utils.h  map_utils.h  reference_utils.h  string_utils.h  vector_utils.h
